[package]
name = "monoxide"
version = "0.0.1"
authors = ["mehdi <mehdi.bcheikh@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/monoxide"
license = "Apache-2.0"
description = "A mongodb helper"

[dependencies]
serde = "1.0.126"
futures = "0.3.15"
bson = "2.0.0-beta.1"

[dependencies.mongodb]
version = "2.0.0-beta.1"
default-features = false
features = ["async-std-runtime"]